--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>The digital library</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+      </style>
   </head>
 
   <body>
